# PyNebulosa

./: README.md  example.py  pyproject.toml
docs/: api_reference.md
pynebulosa/: __init__.py  kde.py  plotting.py
tests/: test_joint_legend.py  test_pynebulosa.py
