[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynebulosa"
version = "1.0.0"
description = "Single-Cell Data Visualisation Using Kernel Gene-Weighted Density Estimation"
authors = [{name = "Dot4diw", email = ""}]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "anndata>=0.8.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pynebulosa*"]

[tool.setuptools.package-data]
pynebulosa = ["py.typed"]
